--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv = "Cache-Control" content = "cache"> 
 
     <!-- Page Title and Favicon -->
-    <title>! DE ADAUGAT !</title>
+    <title>Nandra Rares</title>
     <link rel = "icon" type = "image/png" href = "Images/Favicon.png">
 
     <!-- Imports -->
@@ -42,8 +42,7 @@
     <script src = "Javascript/index.js"></script>
 </head>
 
-<body style = "width: 100vw; height: 100vh; background-image: url('Images/Backgrounds/WaveIndexTop.svg');">
-
+<body style = "width: 100vw; height: 100vh;" class = "Color_Background_DarkPrimary">
 
 
 
