--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 					<i class = "fas fa-user NavbarIcon"></i>
 				</div>
 			</div>
+
+			<div class = "row" id = "NavbarActiveRow">
+				<div id = "ActiveMenu"></div>
+			</div>
 		</div>
 	</navbar>
 
@@ -74,29 +78,37 @@
 	<div class = "container-fluid swiper-container" id = "PagesContainer">
 		<div class = "swiper-wrapper">
 			<!-- Home Page -->
-			<section class = "PageContainer swiper-slide" id = "HomePage">
-				<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
-					<h1>Page 1</h1>
-				</div>
-			</section>
+			<page class = "swiper-slide" id = "HomePage">
+				<section>
+					<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
+						<h1>Page 1</h1>
+					</div>
+				</section>
+			</page>
 
-			<section class = "PageContainer swiper-slide" id = "HomePage">
-				<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
-					<h1>Page 2</h1>
-				</div>
-			</section>
+			<page class = "swiper-slide" id = "HomePage">
+				<section>
+					<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
+						<h1>Page 2</h1>
+					</div>
+				</section>
+			</page>
 
-			<section class = "PageContainer swiper-slide" id = "HomePage">
-				<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
-					<h1>Page 3</h1>
-				</div>
-			</section>
+			<page class = "swiper-slide" id = "HomePage">
+				<section>
+					<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
+						<h1>Page 3</h1>
+					</div>
+				</section>
+			</page>
 
-			<section class = "PageContainer swiper-slide" id = "HomePage">
-				<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
-					<h1>Page 4</h1>
-				</div>
-			</section>
+			<page class = "swiper-slide" id = "HomePage">
+				<section>
+					<div class = "text-center" style = "width: 100%; height: 100%; padding-top: 42.5vh;">
+						<h1>Page 4</h1>
+					</div>
+				</section>
+			</page>
 		</div>
 	</div>
 
